--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ p {
 
 a {
     text-decoration: none;
+    cursor:pointer;
     color: var(--primary-color);
     transition: color 0.3s;
 }
@@ -384,4 +385,5 @@ h2 {
     .skills-list ul {
         grid-template-columns: 1fr;
     }
+
 }
